<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFrag">

    <!--unnoetig-->
    <!--<TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/quizzestvid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/quizzes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        style="@style/TXT"/>

    <Button
        android:id="@+id/gamebuttonnummernschildid"
        style="@style/BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="@string/guessplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loadingnummernschildtvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonnummernschildid" />

    <!--<Button
        android:id="@+id/gamebuttonnummernschildaufzeitid"
        style="@style/BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="Nummernschild Quiz (Auf Zeit)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loadingnummernschildaufzeittvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonnummernschildaufzeitid" />-->

    <!--<ProgressBar
        android:id="@+id/progressbarquiz1id"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonnummernschildzuortid" />-->

    <Button
        android:id="@+id/gamebuttonortid"
        style="@style/BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/guessnumberplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonnummernschildid" />

    <TextView
        android:id="@+id/loadingorttvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonortid" />

    <!--<Button
        android:id="@+id/gamebuttonortaufzeitid"
        style="@style/BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Ort Quiz (Auf Zeit)"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonortid" />

    <TextView
        android:id="@+id/loadingortaufzeittvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamebuttonortaufzeitid" />-->


    <!--game settings-->
    <LinearLayout
        android:id="@+id/gamesettingsllid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent">
<!-- android:layout_marginBottom="?attr/actionBarSize"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/gamesettings"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"
            style="@style/TXT"/>

        <LinearLayout
            android:id="@+id/amountofnumberplatesllid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/guesses"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                style="@style/TXT"/>

            <Button
                android:id="@+id/twentynumberplatesid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="13sp"
                android:layout_margin="5dp"
                android:text="@string/twenty"/>
            <Button
                android:id="@+id/thirtynumberplatesid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="13sp"
                android:text="@string/thirty"/>
            <Button
                android:id="@+id/fiftynumberplatesid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="13sp"
                android:text="@string/fifty"/>
            <Button
                android:id="@+id/allnumberplatesid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="13sp"
                android:text="@string/all"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amountofminutesllid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/minutes"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                style="@style/TXT"/>
            <Button
                android:id="@+id/oneminbuttonid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:text="@string/onemin"/>
            <Button
                android:id="@+id/threeminbuttonid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:text="@string/threemin"/>
            <Button
                android:id="@+id/fiveminbuttonid"
                style="@style/BTN_INVIS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="12sp"
                android:text="@string/fivemin"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>