<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">
<!--TODO background dark gray? ?: /(-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/screenmodeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            style="@style/TXT"
            android:text="@string/screenmode"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:id="@+id/dayscreenid"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:layout_weight="0"
            android:padding="12dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/sun"/>

        <ImageButton
            android:id="@+id/nightscreenid"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:layout_weight="0"
            android:padding="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/moon"/>

        <TextView
            android:id="@+id/systemscreenid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="14sp"
            style="@style/TXT"
            android:layout_marginStart="10dp"
            android:text="@string/system"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/languageid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            style="@style/TXT"
            android:text="@string/language"
            android:layout_gravity="center_vertical"/>

   <!--     <ImageButton
            android:id="@+id/germanid"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:layout_weight="0"
            android:padding="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/german"/>

        <ImageButton
            android:id="@+id/englishid"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:layout_weight="0"
            android:padding="12dp"
            android:scaleType="fitXY"
            android:src="@drawable/english"/> -->

        <TextView
            android:id="@+id/germanlanguageid"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="14sp"
            android:gravity="center"
            style="@style/TXT"
            android:text="@string/germanabbreviation"/>

        <TextView
            android:id="@+id/englishlanguageid"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="14sp"
            style="@style/TXT"
            android:gravity="center"
            android:text="@string/englishabbreviation"/>

        <TextView
            android:id="@+id/systemlanguageid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="14sp"
            style="@style/TXT"
            android:layout_marginStart="10dp"
            android:text="@string/system"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


</LinearLayout>
