<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="50dp"
    android:layout_marginHorizontal="40dp">

    <TextView
        android:id="@+id/gameovertvid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/game_over"
        style="@style/TXT"/>

    <TextView
        android:id="@+id/percentscoretvid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="25sp"
        tools:text="70%"
        style="@style/TXT"/>

    <TextView
        android:id="@+id/totaltimetakenoramountofguessestvid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="25sp"
        tools:text="2min 20s"
        style="@style/TXT"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/guessedtvid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/correct"
                style="@style/TXT"/>
            <TextView
                android:id="@+id/amountofguessedtvid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                tools:text="15"
                style="@style/TXT"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/skippedtvid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/skipped"
                style="@style/TXT"/>
            <TextView
                android:id="@+id/amountofskippedtvid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                tools:text="5"
                style="@style/TXT"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <ListView
            android:id="@+id/listview_correct_guessesid"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="15sp"/>
        <ListView
            android:id="@+id/listview_skipped_guessesid"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="15sp"/>
    </LinearLayout>

    <!--back & restart button-->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/backbuttonid"
            style="@style/BTN"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/back" />
        <Space
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/newgamebuttonid"
            style="@style/BTN"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/newgame" />
        <Space
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>